--- a/index.html
+++ b/index.html
@@ -678,11 +678,11 @@
                     
                     <form action="https://formsubmit.co/emilbejlinson@gmail.com" method="POST">
                         <div class="mb-3">
-                        <input type="text" class="form-control" placeholder="Ваше имя" required>
+                        <input type="text" class="form-control" name = "name" placeholder="Ваше имя" required>
                     </div>
-                        <input type="text" class="form-control" placeholder="Telegram / WhatsApp" required>
+                        <input type="text" class="form-control" name = "contact" placeholder="Telegram / WhatsApp" required>
                         <div class="mb-3">
-                        <input type="email" class="form-control" placeholder="Email" required>
+                        <input type="email" class="form-control" name = "email" placeholder="Email" required>
                     </div>
                     <div class="mb-3">
                         <textarea class="form-control" rows = "4" placeholder="Чем занимается ваш бизнес" required></textarea>
