--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                         <input type="email" class="form-control" name = "email" placeholder="Email" required>
                     </div>
                     <div class="mb-3">
-                                             <textarea class="form-control" name = "business theme" rows = "4" placeholder="Чем занимается ваш бизнес" required></textarea>
+                       <textarea class="form-control" name = "business" placeholder="Чем занимается ваш бизнес" required></textarea>
 
                     </div>
                     <div class="d-grid">
