--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                         <p class="feature-text">Оставь заявку и получи бесплатную консультацию</p>
                     </div>
                     
-                    <form action="https://formsubmit.co/emilbejlinson@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/Alsetai@mail.ru" method="POST">
                         <div class="mb-3">
                         <input type="text" class="form-control" name = "name" placeholder="Ваше имя" required>
                     </div>
