--- a/index.html
+++ b/index.html
@@ -691,7 +691,9 @@
                         <textarea class="form-control" name = "business" placeholder="Чем занимается ваш бизнес" required></textarea>
                     </div>
                     <div class="d-grid">
-                        <button type="submit" class="btn btn-primary">Оставить заявку</button></div>
+                        <button type="submit" class="btn btn-primary">Оставить заявку</button>
+                    <h5> Оставляя заявку, вы соглашаетесь с <a href = "#">политикой конфиденциальности</a> и даёте согласие на обработку персональных данных.</h5>
+                    </div>
                       </form>
                           
                       </div>
