--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                         <span class="faq-toggle">+</span>
                     </h4>
                     <div class="faq-answer">
-                        <p>Telegram, WhatsApp, VK, сайт, Instagram, Facebook и другие популярные платформы. Работаем с любыми каналами, где общаются ваши клиенты.</p>
+                        <p>Telegram, WhatsApp, VK, веб-сайты и другие популярные платформы. Работаем с любыми каналами, где общаются ваши клиенты.</p>
                     </div>
                 </div>
                 
