--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                 <div class="form-section animate-on-scroll">
                     <div class="text-center mb-5">
                         <h2 class="section-title">Хочешь протестировать AI-менеджера?</h2>
-                        <p class="feature-text">Оставь заявку и получи <strong>бесплатную консультацию</strong></p>
+                        <p class="feature-text">Оставь заявку и получи <strong>бесплатную </strong>консультацию</p>
                     </div>
                     
                     <form action="https://formsubmit.co/Alsetai@mail.ru" method="POST">
