privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -79,7 +79,39 @@
     <h2>6. Обязанности Оператора</h2>
     <p>Оператор обязан обеспечить защиту персональных данных, соблюдать конфиденциальность, обеспечить реализацию прав субъектов данных.</p>
 
-    <!-- Продолжение разделов при необходимости -->
+    <section id="7">
+        <h2>7. ПОРЯДОК И УСЛОВИЯ ОБРАБОТКИ ПЕРСОНАЛЬНЫХ ДАННЫХ</h2>
+        <ul>
+          <li>Обработка персональных данных осуществляется Оператором в соответствии с требованиями законодательства Российской Федерации.</li>
+          <li>Обработка персональных данных осуществляется с согласия Субъектов персональных данных, а также без такового в случаях, предусмотренных законодательством.</li>
+          <li>Оператор осуществляет сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление и уничтожение персональных данных.</li>
+          <li>Обработка осуществляется с использованием автоматизированных средств.</li>
+          <li>Персональные данные получаются непосредственно от Субъектов на Сайте Оператора.</li>
+          <li>Не допускается раскрытие третьим лицам и распространение без согласия, если иное не предусмотрено федеральным законом.</li>
+          <li>Передача персональных данных уполномоченным органам осуществляется согласно законодательству.</li>
+          <li>Оператор использует базы данных, находящиеся на территории Российской Федерации.</li>
+        </ul>
+      </section>
+      
+      <section id="8">
+        <h2>8. ПРАВА СУБЪЕКТОВ ПЕРСОНАЛЬНЫХ ДАННЫХ</h2>
+        <ul>
+          <li>получение полной информации о своих персональных данных;</li>
+          <li>доступ к персональным данным, включая получение копии любой записи, за исключением случаев, предусмотренных федеральным законом;</li>
+          <li>уточнение, блокирование или уничтожение данных при нарушении условий обработки;</li>
+          <li>отзыв согласия на обработку персональных данных;</li>
+          <li>принятие мер по защите своих прав;</li>
+          <li>обжалование действий или бездействия Оператора в уполномоченный орган или в суд;</li>
+          <li>осуществление иных предусмотренных законодательством прав.</li>
+        </ul>
+      </section>
+      
+      <section id="9">
+        <h2>9. ЗАКЛЮЧИТЕЛЬНЫЕ ПОЛОЖЕНИЯ</h2>
+        <p>9.1 Настоящая Политика действует бессрочно до замены новой редакцией.</p>
+        <p>9.2 Актуальная версия размещена в сети Интернет по адресу: <a href="https://alset-liard.vercel.app/policy/">https://alset-liard.vercel.app/policy/</a></p>
+        <p>9.3 Обращения субъектов персональных данных по вопросам изменения, блокирования или уничтожения персональных данных, а также отзывов согласия принимаются по адресу электронной почты: <a href="mailto:alsetai@mail.ru">alsetai@mail.ru</a></p>
+      </section>
 
 </body>
 </html>
