--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                     </div>
                     <div class="d-grid">
                         <button type="submit" class="btn btn-primary">Оставить заявку</button>
-                    <h5> Оставляя заявку, вы соглашаетесь с <a href = "privacy-policy.html">политикой конфиденциальности</a> и даёте согласие на обработку персональных данных.</h5>
+                    <h5> Оставляя заявку, вы соглашаетесь с <a href = "privacy.html">политикой конфиденциальности</a> и даёте согласие на обработку персональных данных.</h5>
                     </div>
                       </form>
                           
