--- a/privacy.html
+++ b/privacy.html
@@ -109,7 +109,7 @@
       <section id="9">
         <h2>9. ЗАКЛЮЧИТЕЛЬНЫЕ ПОЛОЖЕНИЯ</h2>
         <p>9.1 Настоящая Политика действует бессрочно до замены новой редакцией.</p>
-        <p>9.2 Актуальная версия размещена в сети Интернет по адресу: <a href="https://alset-liard.vercel.app/privacy-policy">https://alset-liard.vercel.app/policy/</a></p>
+        <p>9.2 Актуальная версия размещена в сети Интернет по адресу: <a href="https://alset-liard.vercel.app/privacy.html">https://alset-liard.vercel.app/policy/</a></p>
         <p>9.3 Обращения субъектов персональных данных по вопросам изменения, блокирования или уничтожения персональных данных, а также отзывов согласия принимаются по адресу электронной почты: <a href="mailto:alsetai@mail.ru">alsetai@mail.ru</a></p>
       </section>
 
