--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
         <textarea placeholder="Чем занимается ваш бизнес" rows="4" required></textarea>
         <button type="submit">Оставить заявку</button>
         <p class="privacy-note">
-          Оставляя заявку, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
+          Оставляя заявку, вы соглашаетесь с <a href="privacy.html">политикой конфиденциальности</a>
           и даёте согласие на обработку персональных данных.
         </p>
       </form>
