--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </li>
                 </ul>
                 <div class="ms-lg-3 mt-3 mt-lg-0">
-                    <a href="#contact" class="btn btn-primary"><strong> Консультация</strong></a>
+                    <a href="#consultation" class="btn btn-primary"><strong> Консультация</strong></a>
                 </div>
             </div>
         </div>
