--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         Автоматизируем заявки, снизим нагрузку, бот работает 24/7.
                     </p>
                     <div class="d-flex flex-wrap mt-4 animate__animated animate__fadeInUp animate__delay-1s">
-                        <a href="#contact" class="btn btn-primary"> Получить бесплатную консультацию</a>
+                        <a href="#consultation" class="btn btn-primary"> Получить бесплатную консультацию</a>
                     </div>
         
                 </div>
