--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
         <p>Оставь заявку и получи <strong>бесплатную</strong> консультацию</p>
       </div>
   
-      <form id="contact-form" action="https://formsubmit.co/Alsetai@mail.ru" method="POST" class="form-fields">
+      <form id="contact-form" action="https://formsubmit.co/emilbejlinson@gmail.com" method="POST" class="form-fields">
         <!-- Скрытые параметры formsubmit -->
         <input type="hidden" name="_next" value="https://alset.ai/#thanks">
         <input type="hidden" name="_captcha" value="false">
