--- a/index.html
+++ b/index.html
@@ -668,37 +668,62 @@
   
 <!-- Форма заявки -->
 <section class="form-section" id="consultation">
-    <div class="form-wrapper">
-      <div class="form-text">
-        <h2>Хочешь протестировать AI-менеджера?</h2>
-        <p>Оставь заявку и получи <strong>бесплатную</strong> консультацию</p>
-      </div>
-  
-      <form id="contact-form" action="https://formsubmit.co/emilbejlinson@gmail.com" method="POST" class="form-fields">
-        <!-- Скрытые параметры formsubmit -->
-        <input type="hidden" name="_next" value="https://alset.ai/#thanks">
-        <input type="hidden" name="_captcha" value="false">
-  
-        <!-- Поля формы -->
-        <input type="text" name="name" placeholder="Ваше имя" required />
-        <input type="text" name="messenger" placeholder="Telegram / WhatsApp" required />
-        <input type="email" name="email" placeholder="Email" required />
-        <textarea name="business" placeholder="Чем занимается ваш бизнес" rows="4" required></textarea>
-  
-        <button type="submit">Оставить заявку</button>
-  
-        <p class="privacy-note">
-          Оставляя заявку, вы соглашаетесь с <a href="privacy.html">политикой конфиденциальности</a>
-          и даёте согласие на обработку персональных данных.
-        </p>
-      </form>
-  
-      <div id="thank-you-message" style="display: none; padding: 20px; background: #f0f0f0; border-radius: 12px;">
-        <h3>🎉 Спасибо за заявку!</h3>
-        <p>Мы свяжемся с вами в ближайшее время.</p>
-      </div>
+  <div class="form-wrapper">
+    <div class="form-text">
+      <h2>Хочешь протестировать AI-менеджера?</h2>
+      <p>Оставь заявку и получи <strong>бесплатную</strong> консультацию</p>
     </div>
-  </section>
+
+    <form id="contact-form" action="https://formsubmit.co/emilbejlinson@gmail.com" method="POST" class="form-fields">
+      <!-- Скрытые параметры formsubmit -->
+      <input type="hidden" name="_next" value="https://alset.ai/#thanks">
+      <input type="hidden" name="_captcha" value="false">
+
+      <!-- Поля формы -->
+      <input type="text" name="name" placeholder="Ваше имя" required />
+      <input type="text" name="messenger" placeholder="Telegram / WhatsApp" required />
+      <input type="email" name="email" placeholder="Email" required />
+      <textarea name="business" placeholder="Чем занимается ваш бизнес" rows="4" required></textarea>
+
+      <button type="submit">Оставить заявку</button>
+
+      <p class="privacy-note">
+        Оставляя заявку, вы соглашаетесь с <a href="privacy.html">политикой конфиденциальности</a>
+        и даёте согласие на обработку персональных данных.
+      </p>
+    </form>
+
+    <div id="thank-you-message" style="display: none; padding: 20px; background: #f0f0f0; border-radius: 12px;">
+      <h3>🎉 Спасибо за заявку!</h3>
+      <p>Мы свяжемся с вами в ближайшее время.</p>
+    </div>
+  </div>
+</section>
+
+<script>
+  const form = document.getElementById('contact-form');
+  const thankYou = document.getElementById('thank-you-message');
+
+  form.addEventListener('submit', function (e) {
+    e.preventDefault(); // предотвратить перезагрузку
+
+    const formData = new FormData(form);
+    fetch(form.action, {
+      method: "POST",
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    })
+    .then(response => {
+      form.style.display = 'none';
+      thankYou.style.display = 'block';
+    })
+    .catch(error => {
+      alert("Произошла ошибка. Попробуйте ещё раз.");
+    });
+  });
+</script>
 
   
   
