--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
       <p>Оставь заявку и получи <strong>бесплатную</strong> консультацию</p>
     </div>
 
-    <form id="contact-form" action="https://formsubmit.co/emilbejlinson@gmail.com" method="POST" class="form-fields">
+    <form id="contact-form" action="https://formsubmit.co/edward@example.com" method="POST" class="form-fields">
       <!-- Скрытые параметры formsubmit -->
       <input type="hidden" name="_next" value="https://alset.ai/#thanks">
       <input type="hidden" name="_captcha" value="false">
@@ -699,6 +699,32 @@
     </div>
   </div>
 </section>
+
+<script>
+  const form = document.getElementById('privacy-note');
+  const thankYou = document.getElementById('thank-you-message');
+
+  form.addEventListener('submit', function (e) {
+    e.preventDefault(); // предотвратить перезагрузку
+
+    const formData = new FormData(form);
+    fetch(form.action, {
+      method: "POST",
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    })
+    .then(response => {
+      form.style.display = 'none';
+      thankYou.style.display = 'block';
+    })
+    .catch(error => {
+      alert("Произошла ошибка. Попробуйте ещё раз.");
+    });
+  });
+</script>
+
 
   
   
