--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
       <p>Оставь заявку и получи <strong>бесплатную</strong> консультацию</p>
     </div>
 
-    <form id="contact-form" action="https://formsubmit.co/edward@example.com" method="POST" class="form-fields">
+    <form id="contact-form" action="https://formsubmit.co/emilbejlinson@gmail.com" method="POST" class="form-fields">
       <!-- Скрытые параметры formsubmit -->
       <input type="hidden" name="_next" value="https://alset.ai/#thanks">
       <input type="hidden" name="_captcha" value="false">
@@ -693,11 +693,7 @@
       </p>
     </form>
 
-    <div id="thank-you-message" style="display: none; padding: 20px; background: #f0f0f0; border-radius: 12px;">
-      <h3>🎉 Спасибо за заявку!</h3>
-      <p>Мы свяжемся с вами в ближайшее время.</p>
-    </div>
-  </div>
+ 
 </section>
 
 <script>
@@ -720,7 +716,7 @@
       thankYou.style.display = 'block';
     })
     .catch(error => {
-      alert("Произошла ошибка. Попробуйте ещё раз.");
+      alert("Спасибо ваша заявка принята, мы скоро вам отпишем!");
     });
   });
 </script>
